--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,10 @@
-html {
-  background-color: #E4E9FD;
+html ,body{
+   background-color: #E4E9FD;
   background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+  /* background-image: url("ai11.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%; */
   min-height: 1000px;
   font-family: 'helvetica neue';
 }
@@ -10,10 +14,11 @@ h1 {
   padding: 10px;
 }
 
+
 .box {
-  max-width: 400px;
+  /* max-width: 400px; */
   margin: 50px auto;
-  background: white;
+  background: #27293d;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
@@ -27,7 +32,7 @@ h1 {
   min-height: 70px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid #000000;
 }
 
 .item:last-child {
@@ -48,11 +53,11 @@ p {
   padding: 20px;
   font-size: 20px;
   font-weight: 200;
-  color: #00204a;
+  color: #c4c4c4;
 }
 
 form.item {
-  text-align: center;
+  /* text-align: center; */
   margin-left: 20px;
 }
 
@@ -76,7 +81,8 @@ input[type="text"] {
   background: transparent;
   font-size: 20px;
   font-weight: 200;
-  width: 313px;
+  width: 60%;
+  color: #c4c4c4;
 }
 
 input[type="text"]:focus {
@@ -88,9 +94,34 @@ input[type="text"]:focus {
   color: grey;
   opacity: 1;
 }
-
-footer {
-  color: white;
-  color: rgba(0, 0, 0, 0.5);
-  text-align: center;
+li{
+  font-size: 20px;
+  font-weight: bolder;
 }
+footer {
+  margin-top: 30px;
+  color: white;
+  color: rgba(0, 0, 0, 1);
+  text-align: center;
+  font-weight: bolder;
+}
+
+/* .inline {
+  display: inline;
+} */
+
+.butt {
+  background: none;
+  border: none;
+  color: #c4c4c4;
+ text-decoration: underline;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: 'helvetica neue';
+}
+/* .link-button:focus {
+  outline: none;
+}
+.link-button:active {
+  color:red;
+}  */
