--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,7 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
             </div>
+            <a type="submit" class="btn btn-dark" href="/forget" role="button">Forget Password</a>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
 
