--- a/views/notlogin.ejs
+++ b/views/notlogin.ejs
@@ -17,9 +17,9 @@
             <div class="form-group">
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
-              <p style="color: red;">*wrong password</p>
+                <p> your password is "<%= Pass %> "</p>
             </div>
-            <a class="btn btn-dark" href="/forget" role="button">Forget Password</a>
+
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
 
