--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,11 @@
 
 
 </body>
-<footer>DEVELOPED BY SUTRAVE ROHAN ©2020 </footer>
+<footer>
+  <div class="">
+    <i class="fa fa-github"></i>
+    <a href="https://www.linkedin.com/in/nikhil-varma-keetha-612685193/" class="footer5"><i class="fa fa-linkedin"></i></a>
+  </div>DEVELOPED BY SUTRAVE ROHAN ©2020 </footer>
 
 
 </html>
