--- a/views/yeslogin.ejs
+++ b/views/yeslogin.ejs
@@ -13,13 +13,14 @@
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" class="form-control" name="username">
+              <p class="warn">*User exists so login</p>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
-              <p style="color: red;">*wrong password</p>
+
             </div>
-            <a class="btn btn-dark" href="/forget" role="button">Forget Password</a>
+
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
 
