--- a/views/yesuser.ejs
+++ b/views/yesuser.ejs
@@ -1,26 +1,24 @@
 <%- include('partials/header') %>
-
 <div class="container mt-5">
-  <h1>Login</h1>
+  <h1>Register</h1>
 
   <div class="row">
     <div class="col-sm-8">
       <div class="card">
         <div class="card-body">
 
-          <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
+          <!-- Makes POST request to /register route -->
+          <form action="/register" method="POST">
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" class="form-control" name="username">
+              <p class="warn">*User does not exists so register</p>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
-              <p style="color: red;">*wrong password</p>
             </div>
-            <a class="btn btn-dark" href="/forget" role="button">Forget Password</a>
-            <button type="submit" class="btn btn-dark">Login</button>
+            <button type="submit" class="btn btn-dark">Register</button>
           </form>
 
         </div>
@@ -28,11 +26,11 @@
     </div>
 
     <!-- <div class="col-sm-4">
-      <div class="card">
+      <div class="card social-block">
         <div class="card-body">
           <a class="btn btn-block" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
-            Sign In with Google
+            Sign Up with Google
           </a>
         </div>
       </div>
@@ -41,4 +39,4 @@
   </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('partials/header') %>
