--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,6 +1,9 @@
 <%- include('partials/header1') -%>
 
 <body>
+  <div class="full">
+
+
   <div class="row">
     <div class="col-md-1">
 
@@ -72,13 +75,15 @@
 
     </div>
   </div>
-  <div class="">
+  <div class="full2">
     <ul>
       <li>You can add a project in the left container</li>
       <li>You can add a work to be done in a particular project in the right container</li>
+      <li>Tick the checkbox to delete the item</li>
     </ul>
 
 
+  </div>
   </div>
 
   <%- include('partials/footer') -%>
