--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,8 +3,8 @@
 </body>
 <footer>
   <div class="">
-    <i class="fa fa-github"></i>
-    <a href="https://www.linkedin.com/in/nikhil-varma-keetha-612685193/" class="footer5"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/sutraverohan/todolist.git" class="footer5"><i class="fa fa-github" style="font-size:24px; margin-right: 10px;"></i></a>
+    <a href="https://www.linkedin.com/in/rohan-sutrave-2b35081a9" class="footer5"><i  class="fa fa-linkedin" style="font-size:24px"></i></a>
   </div>DEVELOPED BY SUTRAVE ROHAN ©2020 </footer>
 
 
